--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -60,7 +60,7 @@
 }
 
 .scrolled .logo a {
-  color: var(--color-dark-brown);
+  color: var(--color-tabaco);
 }
 
 .scrolled .nav a {
@@ -100,19 +100,22 @@
 }
 
 .mobileLogo {
-  display: flex;
+  display: flex !important;
+  align-items: center;
 }
 
 .desktopLogo {
-  display: none;
+  display: none !important;
 }
 
 @media (min-width: 1024px) {
   .mobileLogo {
-    display: none;
+    display: none !important;
   }
   .desktopLogo {
-    display: flex;
+    display: flex !important;
+    flex-direction: column;
+    align-items: center;
   }
 }.nav {
   display: flex;
